fix label color.vertical-align { middle

--- a/css/demo.css
+++ b/css/demo.css
@@ -31,13 +31,10 @@ h1, h2, h3, h4 { color: #ddd; text-align: center; }
 h2 img { margin-bottom: 7px; }
 
 .label { vertical-align: middle;
-		
+		text-align: right;
+		color: #000;
 		} 
 
-.vertical-align {
-    display: flex;
-    align-items: center;
-}
 
 #nav { display: block; width: auto; text-align: center; margin: 20px auto 0 auto; line-height: 45px; }
 #nav a { text-align: center; background: #000; color: #FFF; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; padding: 10px; white-space: nowrap; }
